; ModuleID = '/home/carl/AnghaBench/freebsd/bin/sh/extr_parser.c_setprompt.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/sh/extr_parser.c_setprompt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@whichprompt = common dso_local global i32 0, align 4
@el = common dso_local global i32 0, align 4
@out2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @setprompt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setprompt(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* @whichprompt, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %15

7:                                                ; preds = %1
  %8 = load i32, i32* @el, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %7
  %11 = call i32 @getprompt(i32* null)
  %12 = call i32 @out2str(i32 %11)
  %13 = load i32, i32* @out2, align 4
  %14 = call i32 @flushout(i32 %13)
  br label %15

15:                                               ; preds = %6, %10, %7
  ret void
}

declare dso_local i32 @out2str(i32) #1

declare dso_local i32 @getprompt(i32*) #1

declare dso_local i32 @flushout(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
